<resources>
    <string name="app_name">Cristiano Ronaldo Quotes &amp; Wallpapers</string>
    <string name="fragment_wallpaper_title">CR7 Wallpapers</string>
    <string name="fragment_quote_title">CR7 Quotes</string>

    <string name="favorite">like</string>
    <string name="un_favorite">like</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="set_as">Set As</string>

    <string name="upload_image">Upload Image</string>
    <string name="approve_uploads">Approve Uploads</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="offline_cache">Offline Cache</string>
    <string name="appreciate">Appreciate</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="approve">Approve</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>

    <string name="approve_wallpapers_here">Fetch Wallpapers Here!</string>

    <string name="upload_wallpaper">Upload Wallpaper</string>
    <string name="upload_wallpapers_here">Upload Wallpapers Here!</string>
    <string name="wallpaper_category">Wallpaper Category</string>
    <string name="wallpaper_section">Wallpaper Section</string>

    <string name="admob_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_test_reward_video_id">ca-app-pub-3940256099942544/5224354917</string>


    <!--
    <string name="admob_banner_main">@string/admob_test_banner_id</string>
    <string name="admob_banner_wallpaper_detail">@string/admob_test_banner_id</string>
    <string name="admob_banner_category_detail">@string/admob_test_banner_id</string>

    <string name="admob_interstitial_id">@string/admob_test_interstitial_id</string>
    <string name="category_admob_reward_video_id">@string/admob_test_reward_video_id</string>
    <string name="quote_admob_reward_video_id">@string/admob_test_reward_video_id</string>
    <string name="wallpaper_admob_reward_video_id">@string/admob_test_reward_video_id</string>
    -->


    <string name="admob_banner_main">ca-app-pub-6150813452529727/9500088135</string>
    <string name="admob_banner_wallpaper_detail">ca-app-pub-6150813452529727/8810479532</string>
    <string name="admob_banner_category_detail">ca-app-pub-6150813452529727/5916066343</string>

    <string name="admob_interstitial_id">ca-app-pub-6150813452529727/1621598119</string>
    <string name="quote_admob_reward_video_id">ca-app-pub-6150813452529727/3705917547</string>
    <string name="category_admob_reward_video_id">ca-app-pub-6150813452529727/8618907840</string>
    <string name="wallpaper_admob_reward_video_id">ca-app-pub-6150813452529727/7972659132</string>
</resources>