<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/upload"
        android:title="@string/upload_image"
        android:icon="@drawable/ic_upload" />

    <item
        android:id="@+id/night_mode"
        android:title="@string/night_mode"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

    <item
        android:id="@+id/offline_cache"
        android:title="@string/offline_cache"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

    <item android:title="@string/appreciate">
        <menu>
            <item
                android:id="@+id/rate_app"
                android:icon="@drawable/ic_rate_app"
                android:title="@string/rate_app" />

            <item
                android:id="@+id/share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />

            <item
                android:id="@+id/more_apps"
                android:icon="@drawable/ic_more_apps"
                android:title="@string/more_apps" />
        </menu>
    </item>
</menu>
